--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   padding:50px;
-  font:13px/1.5 Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:12px Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#222;
   font-weight:500;
 }
