--- a/style.css
+++ b/style.css
@@ -317,6 +317,14 @@ div.panel.show {
 
 result {
 	background-color: white;
-	color:#43d854
+	color:#43d854;
 	border: 1px solid black;
+	margin: 5px;
+}
+
+problem_tanimi {
+	background-color: white;
+	color:#black;
+	border: 1px solid black;
+	margin: 5px;
 }
