--- a/style.css
+++ b/style.css
@@ -319,6 +319,7 @@ div.panel.show {
 	float:left;
 	max-width: 400px;
 	min-width: 200px;
+	height:inherit;
 }
 
 .result {
@@ -331,6 +332,7 @@ div.panel.show {
 	min-width: 200px;
 	border-width:.1em .1em .1em .8em;
 	padding:.2em .6em;
+	height:inherit;
 }
 
 .problem_tanimi {
