--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ div.panel.show {
 	background-color: white;
 	border: solid #39c;
 	margin-left:5px;
-	float: right;
+	float: left;
 	max-width: 400px;
 	min-width: 200px;
 	border-width:.1em .1em .1em .8em;
