--- a/style.css
+++ b/style.css
@@ -1,360 +1,51 @@
-body {
-  padding:50px;
-  font:13px Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#222;
-  font-weight:500;
-}
-
-div.menu {
-  font-size: 16px;
-}
-  
-h1 {
-  color:#222;
-  margin:0 0 15px;
-}
-
-h2 {
-  color:#222;
-  margin:20 0 15px;
-}
-
-h3, h4, h5, h6 {
-  color:#222;
-  margin:0 0 10px;
-}
-
-p {
-  margin:0 0 15px;
-}
-
-ul, ol, table, pre, dl {
-  margin:0 0 5px;
-}
-
-h1, h2, h3 {
-  line-height:1.1;
-}
-
-h1 {
-  font-size:26px;
-  color:#393939;
-}
-
-h2 {
-  color:#393939;
-}
-
-h3, h4, h5, h6 {
-  color:#494949;
-  margin:10px 0 10px;
-}
-
-a {
-  color:#39c;
-  font-weight:400;
-  text-decoration:none;
-}
-
-a:hover {
-  color:#069;
-}
-
-a small {
-  font-size:11px;
-  color:#777;
-  margin-top:-0.6em;
-  display:block;
-}
-
-a:hover small {
-  color:#777;
-}
-
-.wrapper {
-  width:650px;
-  margin:0 auto;
-}
-
-blockquote {
-  border-left:1px solid #e5e5e5;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
-}
-
-code, pre {
-  /* font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace; */
-  color:#333;
-  /* font-size:12px; */
-  background: #f8f8f8;  
-  border-radius:2px;
-  border:1px;
-}
-
-pre {
-  padding:8px 15px;
-  background: #f8f8f8;  
-  border-radius:5px;
-  border:1px solid #e5e5e5;
-  overflow-x: auto;
-}
-
-table {
-  width:100%;
-  border-collapse:collapse;
-}
-
-th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
-}
-
-dt {
-  color:#444;
-  font-weight:700;
-}
-
-th {
-  color:#444;
-}
-
-img {
-  max-width:100%;
-}
-
-header {
-  width:150px;
-  float:left;
-  position:fixed;
-}
-
-header ul {
-  list-style:none;
-  padding:0;
-}
-
-strong {
-  color:#222;
-  font-weight:700;
-}
-
-header ul li {
-  font-size:18px;
-}
-
-section {
-  width:500px;
-  float:right;
-  padding-bottom:50px;
-}
-
-small {
-  font-size:11px;
-}
-
-hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
-}
-
-footer {
-  width:150px;
-  float:left;
-  position:fixed;
-  bottom:50px;
-}
-
-
-@media print, screen and (max-width: 720px) {
-  
-  div.wrapper {
-    width:auto;
-    margin:0;
+.imageSlides {
+    display: none
   }
-  
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
+   
+  img {
+    margin: auto;
+    display: block;
+    width: 800px;
+    height: 600px;
+   }
+   
+  /* Our main images-slideshow container */
+  .images-slideshow {
+    max-width: 1024px;
+    position: relative;
+    margin: auto;
   }
-  
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0 0 0;
-    padding:20px 0;
-    margin:0 0 20px;
-  }
-  
-  header a small {
-    display:inline;
-  }
-  
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
-
-  body {
-    word-wrap:break-word;
-  }
-  
-  header {
-    padding:0;
-  }
-
-  div.menu {
-    text-align: justify;
-  }
-  
-  header ul, header p.view {
-    position:static;
-  }
-  
-  pre, code {
-    word-wrap:normal;
-  }
-
-  div.menu img {
-    display: none;
-  }
-
-  div.menu br {
-    display: none;
-  }
-
-  div.menu:after {
-    content: "";
-    display: inline-block;
-    width: 100%;
-  }
-
-  body {
-    padding:15px;
-  }
-  
-  header {
-    padding:0;
-  }
-
-  div.menu {
-    text-align: justify;
-  }
-  
-  header ul {
-    display:none;
-  }
-
-  div.menu:after {
-    content: "";
-    display: inline-block;
-    width: 100%;
-  }  
-}
-
-@media print {
-  body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
-  }
-}
-
-.bos_satir{
-  margin:5px;
-}
-
-/* AKORDEON MENU BASLA */
-
-button.accordion {
-    background-color: #eee;
-    color: #444;
+   
+  /*Style for ">" next and "<" previous buttons */
+  .slider-btn{
     cursor: pointer;
-    padding: 8px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-}
-
-button.accordion.active, button.accordion:hover {
-    background-color: #ddd;
-}
-
-button.accordion:after {
-    content: '\02795';
-    font-size: 13px;
-    color: #777;
-    float: right;
-    margin-left: 5px;
-}
-
-button.accordion.active:after {
-    content: "\2796";
-}
-
-div.panel {
-    padding: 0 18px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: 0.6s ease-in-out;
-    opacity: 0;
-}
-
-div.panel.show {
-    opacity: 1;
-    max-height: 2000px;  
-}
-
-/* AKORDEON MENU BITIR */
-
-.ornekler{
-	clear:both;
-}
-
-.code {
-	padding:.2em;
-	overflow:auto;
-	border:solid #46bc99;
-	border-width:.1em .1em .1em .8em;
-}
-
-.result {
-	margin-top:2px;
-	background-color: white;
-	border: solid #39c;
-	border-width:.1em .1em .1em .8em;
-	padding:.2em;
-	height:inherit;
-}
-
-.problem_tanimi {
-	background-color: white;
-	color:#black;
-	border: solid #990033;
-	margin: 4px 0px;
-	border-width:.1em .1em .1em .8em;
-	padding:.2em;
-}
-
-.problem_tanimi p{
-	color:black;
-}
-
-.left{
-	width:50%;
-	float:left;
-}
-
-.right{
-	width:50%;
-	float:right;
-}
-
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 8px 16px;
+    margin-top: -22px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+  }
+   
+  /* setting the position of the previous button towards left */
+  .previous {
+    left: 2%;
+  }
+   /* setting the position of the next button towards right */
+  .next {
+    right: 2%;
+  }
+   
+  /* On hover, adding a background color */
+  .previous:hover,
+  .next:hover {
+    color: rgb(255, 253, 253);
+    background-color: rgba(0, 0, 0, 0.8);
+  }
